# email-anonymity

./: .gitignore  Cargo.toml  README.md  shallot.avif
config/: config.yaml  config_base.yaml  config_old.yaml
src/: constant_size.rs  deserialization.rs  main.rs  oauth2.rs  surb.rs
