[package]
name = "email-anonymity"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
config = "0.15.8"
duration-string = "0.5.2"
futures = "0.3.31"
imap = { version = "3.0.0-alpha.15" }
lettre = "0.11.12"
mail-auth = "0.6.1"
mail-parser = "0.10.2"
oauth2 = { version = "5.0.0" }
open = "5.3.2"
serde = "1.0.217"
serde_qs = "0.13.0"
serde_yaml = "0.9.34"
tiny_http = "0.12.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
rusqlite = { version = "0.35.0", features = ["bundled"] }
sphinx-packet = "0.6.0"
x25519-dalek = "2.0.1"
